Port from alexandrnikitin/bloom-filter-scala
With many changes and additions:

- Port all code to scala and using latest lts version (3.3.8)
- Split implementation to on-heap and off-heap implementation
- Use VarHandle to achive zero allocation hashing
- Add new foreign memory implementation for jdk >= 22
- Port tests with discipline and munit